# auto-mlops

./: .gitignore  README.md  Readme.md  pyproject.toml  setup.py
auto_mlops/: deployer.py  pipeline_wrapper.py  utils.py
tests/unit_tests/: test_pipeline_wrapper.py
