[tool.poetry]
name = "auto-mlops"
version = "0.1.6"
description = "Deploy your model in one line of code"
authors = ["Julien Duquesne <julien@datarmada.com>", "Boris Ghidaglia <boris@datarmada.com>"]
readme = "./README.md"

[tool.poetry.dependencies]
python="^3.7"
requests = "^2.23.0"
cloudpickle = "^1.3.0"
scikit-learn = "^0.22.1"
